--- a/VGEC/Views/Admin/Home.cshtml
+++ b/VGEC/Views/Admin/Home.cshtml
@@ -3,6 +3,13 @@
 }
 <style>
     .row{
-        margin:1%
+        margin:10%
+    }
+    div{
+        text-align:center
     }
 </style>
+
+<div class="row">
+    <h1>Welcome!</h1>
+</div>
