--- a/VGEC/Views/Admin/AddFaculty.cshtml
+++ b/VGEC/Views/Admin/AddFaculty.cshtml
@@ -46,7 +46,7 @@
         <div class="col-sm-4">
         </div>
         <div class="col-sm-4">
-            <button type="submit">Submit</button>
+            <button type="submit" class="btn btn-default">Add Faculty</button>
         </div>
         <div class="col-sm-4">
         </div>
